feat: Created crud endpoints (GET, POST, PUT, DELETE) for Venue and Tickets Collections. Error handling and Validation for these implementation.
